V-7 (feat): Выделение единого ответа ModelApiResponse
